<resources>
    <string name="app_name">MoneyDesk</string>
    <string name="btnLogin">Войти</string>
    <string name="btnReg">Регистрация</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnAdd">Add</string>
    <string name="btnClose">Close</string>
    <string name="btnDelete">Удалить</string>
    <string name="bntRename">Rename</string>
    <string name="bntExit">Выход</string>
    <string name="btnSave">Save</string>
    <string name="textUser">User:</string>
    <string name="textPass">Password:</string>
    <string name="textReg">Регистрация</string>
    <string name="textPeroid">Период:</string>
    <string name="textIncome">Расходы за месяц</string>
    <string name="textExpense">Доходы за месяц</string>
    <string name="menu_main">Главная</string>
    <string name="menu_check">Счета</string>
    <string name="menu_category">Категории</string>
    <string name="menu_chart">Обзор</string>
    <string name="item_check">Счёт</string>
    <string name="item_amount">Баланс</string>
    <string name="item_category">Категория</string>
    <string name="item_date">Дата</string>
</resources>