<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.moneydesk.ui.tablayout.TabLayoutFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_tablayout" />

    <fragment
        android:id="@+id/nav_check"
        android:name="com.example.moneydesk.ui.checkfragment.CheckFragment"
        android:label="@string/menu_check"
        tools:layout="@layout/fragment_check" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.moneydesk.ui.categoryfragment.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

</navigation>